tests/baselines/reference/evalAfter0.errors.txt
evalAfter0.ts(4,2): error TS2695: Left side of comma operator is unused and has no side effects.


==== evalAfter0.ts (1 errors) ====
    (0,eval)("10"); // fine: special case for eval
    
    declare var eva;
    (0,eva)("10"); // error: no side effect left of comma (suspect of missing method name or something)
     ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.